🔒️ App: added baby security

--- a/app/assets/css/root.css
+++ b/app/assets/css/root.css
@@ -9,7 +9,7 @@
 }
 
 /* Rahmen beim Hover */
-.Layout:hover {
+.EditorLayout:hover {
     outline: 2px dashed #0ea5e9; /* Tailwind sky-500 */
     cursor: pointer;
 }
