--- a/app/assets/css/root.css
+++ b/app/assets/css/root.css
@@ -92,15 +92,74 @@
 }
 
 @keyframes fade-in-up {
-  from {
-    opacity: 0;
-    transform: translateY(30px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+    from {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
+
 .animate-fade-in-up {
-  animation: fade-in-up 0.6s ease-out forwards;
+    animation: fade-in-up 0.6s ease-out forwards;
+}
+
+.admin-background {
+    background-color: #F0F0F0;
+}
+
+.phaedra-primary-backgroundcolor {
+    background-color: #1D247C;
+    color: white;
+}
+
+.phaedra-primary-color {
+    color: #1D247C;
+}
+
+.activeNavigation {
+    background-color: #C3C6E8 !important;
+}
+
+.Sidebar {
+    width: 100px !important;
+    transition: width 0.3s ease;
+}
+
+/* Breitensteuerung */
+.sidebar-closed {
+    width: 100px !important;
+    transition: width 0.3s ease;
+}
+
+.sidebar-open {
+    width: 300px !important;
+    transition: width 0.3s ease;
+}
+
+/* IconBox Styling */
+.iconBox {
+    height: 30px;
+    width: 30px;
+    min-width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.375rem;
+    padding: 1.25rem;
+}
+
+/* Label Styling */
+.navLabel {
+    font-size: 1.5rem;
+    color: var(--phaedra-primary-color);
+    display: none;
+    transition: opacity 0.3s ease;
+}
+
+.sidebar-open .navLabel {
+    display: block;
 }
