✨ App: added Design for login Page

--- a/app/assets/css/root.css
+++ b/app/assets/css/root.css
@@ -111,6 +111,10 @@
     background-color: #F0F0F0;
 }
 
+.phaedra-primary-color {
+    color: #1D247C;
+}
+
 .phaedra-primary-backgroundcolor {
     background-color: #1D247C;
     color: white;
